--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "dependable": "^0.2.5",
     "express": "^4.9.7",
     "glob": "^4.0.6",
+    "jade": "^1.7.0",
     "mongoose": "^3.8.17",
-    "mongoose-q": "0.0.13"
+    "mongoose-q": "0.0.13",
+    "winston": "^0.8.1"
   }
 }
