--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.9.7",
     "glob": "^4.0.6",
     "jade": "^1.7.0",
+    "lodash" : "2.4.1",
     "mongoose": "^3.8.17",
     "mongoose-q": "0.0.13",
     "winston": "^0.8.1"
