--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body": "^4.5.0",
+    "body-parser": "^1.9.0",
     "dependable": "^0.2.5",
     "express": "^4.9.7",
     "glob": "^4.0.6",
     "jade": "^1.7.0",
-    "lodash" : "2.4.1",
+    "lodash": "2.4.1",
     "mongoose": "^3.8.17",
     "mongoose-q": "0.0.13",
     "winston": "^0.8.1"
