--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dimvc",
-  "version": "0.0.0-beta.3",
+  "version": "0.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
